--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,15 @@
     <string name="label_register_email">Email</string>
     <string name="label_register_phone">Teléfono</string>
     <string name="label_action_to_register">Unirme</string>
+    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
+    <string name="menu_favoritos">Favoritos</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_perfil">Perfil</string>
+    <string name="title_activity_home">home</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="Succefull_log">Ingreso Exitoso</string>
+    <string name="menu_reserva">Reserva</string>
 
 </resources>
